Fix overflow issue on step text [SCI-7124]

--- a/app/assets/stylesheets/steps/components/text.scss
+++ b/app/assets/stylesheets/steps/components/text.scss
@@ -40,6 +40,10 @@
     position: absolute;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   &:hover:not(.edit):not(.locked) {
     background: $color-concrete;
 
